# inveniordm-py

./: .editorconfig  .gitignore  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_client/: __init__.py  client.py  metadata.py  pagination.py  resources.py
invenio_client/records/: metadata.py  resources.py
inveniordm_py/: __init__.py  client.py  metadata.py  pagination.py  resources.py
inveniordm_py/communities/: __init__.py  community.py  metadata.py
inveniordm_py/files/: __init__.py  metadata.py
inveniordm_py/records/: __init__.py  metadata.py  resources.py
tests/: __init__.py  conftest.py  test_communities.py  test_drafts.py  test_files.py  test_invenio_client.py
tests/mock/: __init__.py  handlers.py  request.py  response.py  session.py
