# -*- coding: utf-8 -*-
#
# Copyright (C) 2024 CERN.
#
# inveniordm-py is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.


[metadata]
name = inveniordm-py
version = attr: inveniordm_py.__version__
description = "Invenio REST API client."
long_description = file: README.rst, CHANGES.rst
keywords = invenio rest api
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/inveniordm-py
classifiers =
    Development Status :: 1 - Planning

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    requests>=2.8

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0
    pytest-black>=0.3.0
    sphinx>=4.5.0

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=inveniordm_py --cov-report=term-missing
testpaths = docs tests inveniordm_py
